--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ div {
     height: 200px;
     padding: 20px;
 }
-.form-message {
+.form-error {
     color: #f33a58;
     width: 60%;
     height: 20px;
