--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ main div a:hover {
     box-sizing: border-box;
 }
 div {
-    margin: 50px;
+    margin: 10px;
 }
 .form-label {
     font-size: 1.4rem;
@@ -149,13 +149,11 @@ div {
     text-align: left;
     font-size: 1.2rem;
     display: flex;
-    float: right;
     padding: 0px 20px;
 }
 .form-submit {
     background-color: #1dbfaf;
     outline: none;
-    margin-top: 20px;
     padding: 12px 16px;
     font-weight: 600;
     color: #fff;
@@ -169,7 +167,7 @@ div {
     margin-left: 215px;
 }
 #message {
-    height: 200px;
+    height: 100px;
     padding: 20px;
 }
 .form-error {
@@ -178,5 +176,11 @@ div {
     height: 20px;
     font-size: medium;
     display: inline-block;
-    margin: 5px 200px;
+    margin: 0 20px;
+}
+
+.invalid {
+    border: none;
+    outline: 2px solid red;
+    border-radius: 5px;
 }
